Sat Feb 15 00:13:14 2014  Tanaka Akira  <akr@fsij.org>

	* include/ruby/intern.h,
	  include/ruby/io.h,
	  include/ruby/ruby.h,
	  include/ruby/win32.h,
	  include/ruby/backward/rubysig.h,
	  bignum.c,
	  gc.c,
	  io.c,
	  process.c,
	  safe.c,
	  struct.c,
	  thread.c,
	  ext/socket/rubysocket.h,
	  ext/-test-/old_thread_select: Remove deprecated definitions
	  [ruby-core:60581] [Feature #9502]

Fri Feb 14 18:38:46 2014  Eric Wong  <e@80x24.org>

	* string.c (rb_str_format_m): trade volatile for RB_GC_GUARD
	  RB_GC_GUARD meaning is clear and has better code generation.
	  [ruby-core:60688]

Thu Feb 13 23:30:30 2014  Shugo Maeda  <shugo@ruby-lang.org>

	* vm_insnhelper.c (vm_call_method): should check ci->me->flag of
	  a refining method in case the method is private.
	  [ruby-core:60111] [Bug #9452]

	* vm_method.c (make_method_entry_refined): set me->flag of a refined
	  method entry to NOEX_PUBLIC in case the original method is private
	  and it is refined as a public method.  The original flag is stored
	  in me->def->body.orig_me, so it's OK to make a refined method
	  entry public.  [ruby-core:60111] [Bug #9452]

	* test/ruby/test_refinement.rb: related tests.

Thu Feb 13 18:38:15 2014  Eric Wong  <e@80x24.org>

	* re.c (rb_reg_raise): remove volatile
	  Unnecessary since r41597

Thu Feb 13 18:28:51 2014  Eric Wong  <e@80x24.org>

	* re.c (rb_reg_regcomp): remove volatile
	  Unnecessary since r13261

Thu Feb 13 16:54:32 2014  Zachary Scott  <e@zzak.io>

	* test/ruby/test_array.rb: Ensure flatten! is used for test_flatten
	  Patch by @ksss [Fixes GH-530] https://github.com/ruby/ruby/pull/530

Thu Feb 13 15:43:16 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* parse.y (IDSET_ATTRSET_FOR_INTERN): fix off-by-one bug.

	* parse.y (rb_enc_symname_type): junk ID succeeded by '=' is also
	  attrset ID.  [ruby-core:60668] [Bug #8756]

Thu Feb 13 11:06:32 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in: check if pthread_setname_np is available.
